# SPDX-License-Identifier: MIT
#
# Copyright (c) 2020-2021 Antonio Niño Díaz

add_subdirectory(bios_bitunpack)
add_subdirectory(bios_checksum)
add_subdirectory(bios_decompress)
add_subdirectory(intr_wait)
add_subdirectory(math_arctan)
add_subdirectory(math_arctan2)
add_subdirectory(math_div)
add_subdirectory(math_divmod)
add_subdirectory(math_sqrt)
