# SPDX-License-Identifier: MIT
#
# Copyright (c) 2020 Antonio Niño Díaz

add_subdirectory(background_affine)
add_subdirectory(background_regular_16col)
add_subdirectory(mode3_framebuffer)
add_subdirectory(sprite_affine_16col)
add_subdirectory(sprite_lowlevel_16col)
add_subdirectory(sprite_lowlevel_256col)
add_subdirectory(sprite_regular_16col)
add_subdirectory(text_console)
