# SPDX-License-Identifier: MIT
#
# Copyright (c) 2020-2021 Antonio Niño Díaz

add_subdirectory(background_affine)
add_subdirectory(background_regular_16col)
add_subdirectory(mode3_framebuffer)
add_subdirectory(mode4_framebuffer)
add_subdirectory(mode5_framebuffer)
add_subdirectory(mosaic)
add_subdirectory(priorities)
add_subdirectory(sprite_affine_16col)
add_subdirectory(sprite_lowlevel_16col)
add_subdirectory(sprite_lowlevel_256col)
add_subdirectory(sprite_regular_16col)
add_subdirectory(sprite_regular_256col)
add_subdirectory(text_console)
add_subdirectory(windows)
